Eliminando los componentes FechaData, Counter y agregando las carpetas.

--- a/Server/IngresosWabA.Server.csproj
+++ b/Server/IngresosWabA.Server.csproj
@@ -15,5 +15,10 @@
     <ProjectReference Include="..\Shared\IngresosWabA.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAL\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 
 </Project>
