--- a/Shared/IngresosWabA.Shared.csproj
+++ b/Shared/IngresosWabA.Shared.csproj
@@ -12,5 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameWorkCore.Sqlite" Version="7.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.Tools" Version="7.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
